Fix: CSS Overflow

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,8 @@
 @import './base.scss';
 
 #app {
-  max-width: 100vw;
-  max-height: 100vh;
-  margin: 0 auto;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
   font-weight: normal;
 }
